# indi-3rdparty

indi-eqmod/: CMakeLists.txt  eqmodbase.cpp  eqmodbase.h  skywatcher.cpp  skywatcher.h
indi-fpgafocuser/: CMakeLists.txt  fpga_focuser.cpp  fpga_focuser.h  indi_fpga_focuser.xml.cmake
indi-gphoto/: CMakeLists.txt  gphoto_ccd.cpp  gphoto_ccd.h  gphoto_driver.cpp  gphoto_driver.h  mmapdriver.h  peltier_cooling.hpp  rpigpio_trigger.hpp
indi-qhy/: qhy_ccd.cpp
indi-sv305/: sv305_ccd.cpp
